# xarray-zarr-xgroup

./: .gitignore  README.md  explore_eopf.py  main.py  pyproject.toml  xarray_zarr_xgroup_spec.md
scripts/: explore_eopf_groups.py  make_cs_test_store.py  make_roms_test_store.py  make_spatial_test_store.py
zarr_xgroup/: __init__.py  backend.py  errors.py  i18n.py  resolver.py
zarr_xgroup/conventions/: __init__.py  base.py  cs.py  geolocation.py  proj.py  ref.py  spatial.py  uom.py
zarr_xgroup/tests/: test_backend_cs.py  test_backend_geolocation.py  test_backend_roms.py  test_backend_spatial.py  test_error_handling.py
zarr_xgroup/tests/stores/broken_refs.zarr/: zarr.json
zarr_xgroup/tests/stores/broken_refs.zarr/bad/malformed/: zarr.json
zarr_xgroup/tests/stores/cs_test.zarr/: zarr.json
zarr_xgroup/tests/stores/cs_test.zarr/coords/: zarr.json
zarr_xgroup/tests/stores/cs_test.zarr/coords/time/: zarr.json
zarr_xgroup/tests/stores/cs_test.zarr/coords/time_bnds/: zarr.json
zarr_xgroup/tests/stores/cs_test.zarr/curvilinear/lat/: zarr.json
zarr_xgroup/tests/stores/cs_test.zarr/curvilinear/lon/: zarr.json
zarr_xgroup/tests/stores/cs_test.zarr/curvilinear/pr/: zarr.json
zarr_xgroup/tests/stores/cs_test.zarr/ocean/temp/: zarr.json
zarr_xgroup/tests/stores/cs_test.zarr/params/h/: zarr.json
zarr_xgroup/tests/stores/geolocation_test.zarr/: zarr.json
zarr_xgroup/tests/stores/roms_test.zarr/: zarr.json
zarr_xgroup/tests/stores/spatial_test.zarr/: zarr.json
zarr_xgroup/tests/stores/spatial_test.zarr/shared/: zarr.json
(+131 files in other folders)
