[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xarray-zarr-xgroup"
version = "0.1.0"
description = "XArray backend for cross-group Zarr reference resolution"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "xarray>=2024.10.0",
    "zarr>=3.0.0",
    "numpy>=1.24.0",
]

[project.entry-points."xarray.backends"]
xgroup = "zarr_xgroup.backend:XGroupBackendEntrypoint"

[project.entry-points."zarr_xgroup.conventions"]
cs          = "zarr_xgroup.conventions.cs:CsConventionHandler"
spatial     = "zarr_xgroup.conventions.spatial:SpatialConventionHandler"
ref         = "zarr_xgroup.conventions.ref:RefConventionHandler"
proj        = "zarr_xgroup.conventions.proj:ProjConventionHandler"
uom         = "zarr_xgroup.conventions.uom:UomConventionHandler"
geolocation = "zarr_xgroup.conventions.geolocation:GeolocationConventionHandler"

[tool.pytest.ini_options]
testpaths = ["zarr_xgroup/tests"]

[tool.hatch.build.targets.wheel]
packages = ["zarr_xgroup"]